src/objects/Credit_Book__c.object
<CustomObject>
    <description>Contains fields for Credit Book.</description>
    <fields>
        <fullName>Amount_Used__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Credit_Amount__c  -  Amount_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreditBookType__c</fullName>
        <label>CreditBookType</label>
        <picklist>
            <picklistValues>
                <fullName>Pro Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contains credit financial account value</description>
        <label>Credit Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Credit Books (Credit Financial Account)</relationshipLabel>
        <relationshipName>Credit_Books1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contains debit financial account value</description>
        <label>Debit Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Credit Books (Debit Financial Account)</relationshipLabel>
        <relationshipName>Credit_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expire_Balance__c</fullName>
        <label>Expired Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiry_Dates__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for storing  financial journal entry id</description>
        <label>Financial Journal Entry</label>
        <referenceTo>Financial_Journal_Entry__c</referenceTo>
        <relationshipLabel>Credit Books</relationshipLabel>
        <relationshipName>Credit_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member_ID</description>
        <label>Member ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Books</relationshipLabel>
        <relationshipName>Credit_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit Book</label>
    <nameField>
        <displayFormat>Credit-{0000}</displayFormat>
        <label>Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NegativeCreditAmount</fullName>
        <active>true</active>
        <description>Entered Credit Amount Should Not be in Negative</description>
        <errorConditionFormula>Credit_Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Credit_Amount__c</errorDisplayField>
        <errorMessage>Credit amount must be in positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Past_Date_Expiry</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(  PRIORVALUE(Expiry_Dates__c) )) , ISCHANGED( Expiry_Dates__c ),  PRIORVALUE( Expiry_Dates__c)  &lt;  TODAY()  )</errorConditionFormula>
        <errorDisplayField>Expiry_Dates__c</errorDisplayField>
        <errorMessage>This credit has already expired, you can&apos;t change the expiration date.</errorMessage>
    </validationRules>
</CustomObject>